delete large img

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="members">
         <div class="member">
           <div class="member-icon">
-            <a href="1922114/1922114.html">
+            <a href="1922114/1922114.php">
               <img src="img/11.png">
             </a>
             <p>1922114</p>
